--- a/public/css/main.css
+++ b/public/css/main.css
@@ -310,6 +310,26 @@ pa {
   text-align: center;
 }
 
+.popUpMessage {
+  background-color: #000;
+  text-align: center;
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+  color: #fff;
+  padding: 15px 15px 15px 20px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  background-repeat: no-repeat;
+  background-position: 7px center;
+  opacity: 0.7;
+  filter: alpha(opacity=70);
+  vertical-align: middle;
+  box-shadow: 4px 4px 4px #000;
+  -webkit-box-shadow: 4px 4px 4px #000;
+  -moz-box-shadow: 4px 4px 4px #000;
+}
+
 .row {
   display: flex;
   margin-right: -15px;
