Risoluzione conflitto css

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -19,7 +19,7 @@
                         </div>
 					<% } else if (message) { %>
 						<div class="flex-c-m">
-							<div class="popout message"><%= message %></div>
+							<div class="popout info-message"><%= message %></div>
                         </div>
 					<% } %>
 					<div class="wrap-input100 validate-input m-b-23">
