--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -23,11 +23,11 @@
                         </div>
 					<% } %>
 					<div class="wrap-input100 validate-input m-b-23">
-						<span class="label-input100">E-mail</span>
+						<span class="label-input100">Username</span>
 						<input
 							class="<%= (errorMessage) ? 'input100-invalid' : 'input100' %>"
-                            placeholder="Type your e-mail" required
-                            type="email" name="email" id="email" value="<%= (errorMessage) ? oldInput.email : '' %>">
+                            placeholder="Type your username" required
+                            type="string" name="usrName" id="usrName" value="<%= (errorMessage) ? oldInput.usrName : '' %>">
 						<span class="focus-input100" data-symbol="&#xf206;"></span>
 					</div>
 					<div class="wrap-input100 validate-input">
