--- a/views/admin/listUser.ejs
+++ b/views/admin/listUser.ejs
@@ -9,7 +9,7 @@
         <% if (us.length > 0) { %>
             <div class="grid">
                 <% for (let users of us) { %>
-                    <article class="card match-item" style="background-color: white;" onclick="location.assign('/profile/<%= users.usrName %>')">
+                    <article class="card match-item" style="background-color: white;" onclick="location.assign('/utente/<%= users.usrName %>')">
                         <header class="card__header">
                             <h1 class="match__title"><%= users.nome %></h1>
                             <h2 class="match__playerCount" style="color: #513dff;"><%= users.cognome %></h2>
@@ -23,7 +23,7 @@
                             <br>
                         </div>
                         <div class="card__actions">
-                            <a href="/profile/<%= users.usrName %>" class="btn">Profilo Utente</a>
+                            <a href="/utente/<%= users.usrName %>" class="btn">Profilo Utente</a>
                         </div>
                         <br>
                     </article>
@@ -36,88 +36,3 @@
     </main>
 
 <%- include('../includes/end.ejs') %>
-
-
-
-
-
-
-<!-- <%- include('../includes/head.ejs') %>
-    <link rel="stylesheet" href="/css/adminmatch.css">
-
-</head>
-
-<div class="row">
-    <div class="col-md-12">
-      <div class="user-dashboard-info-box table-responsive mb-0 bg-white p-4 shadow-sm">
-        <table class="table manage-candidates-top mb-0">
-          <thead>
-            <tr>
-              <th>Candidate Name</th>
-              <th class="text-center">Status</th>
-              <th class="action text-right">Action</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr class="candidates-list">
-              <td class="title">
-                <div class="thumb">
-                  <img class="img-fluid" src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="">
-                </div>
-                <div class="candidate-list-details">
-                  <div class="candidate-list-info">
-                    <div class="candidate-list-title">
-                      <h5 class="mb-0"><a href="#">Brooke Kelly</a></h5>
-                    </div>
-                    <div class="candidate-list-option">
-                      <ul class="list-unstyled">
-                        <li><i class="fas fa-filter pr-1"></i>Information Technology</li>
-                        <li><i class="fas fa-map-marker-alt pr-1"></i>Rolling Meadows, IL 60008</li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-              </td>
-              <td class="candidate-list-favourite-time text-center">
-                <a class="candidate-list-favourite order-2 text-danger" href="#"><i class="fas fa-heart"></i></a>
-                <span class="candidate-list-time order-1">Shortlisted</span>
-              </td>
-              <td>
-                <ul class="list-unstyled mb-0 d-flex justify-content-end">
-                  <li><a href="#" class="text-primary" data-toggle="tooltip" title="" data-original-title="view"><i class="far fa-eye"></i></a></li>
-                  <li><a href="#" class="text-info" data-toggle="tooltip" title="" data-original-title="Edit"><i class="fas fa-pencil-alt"></i></a></li>
-                  <li><a href="#" class="text-danger" data-toggle="tooltip" title="" data-original-title="Delete"><i class="far fa-trash-alt"></i></a></li>
-                </ul>
-              </td>
-            </tr>
-            <tr class="candidates-list">
-              <td class="title">
-                <div class="thumb">
-                  <img class="img-fluid" src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="">
-                </div>
-                <div class="candidate-list-details">
-                  <div class="candidate-list-info">
-                    <div class="candidate-list-title">
-                      <h5 class="mb-0"><a href="#">Ronald Bradley</a></h5>
-                    </div>
-                    <div class="candidate-list-option">
-                      <ul class="list-unstyled">
-                        <li><i class="fas fa-filter pr-1"></i>Human Resources</li>
-                        <li><i class="fas fa-map-marker-alt pr-1"></i>Monroe Township, NJ 08831</li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-              </td>
-              <td class="candidate-list-favourite-time text-center">
-                <a class="candidate-list-favourite order-2 text-danger" href="#"><i class="fas fa-heart"></i></a>
-                <span class="candidate-list-time order-1">Shortlisted</span>
-              </td>
-              <td>
-                <ul class="list-unstyled mb-0 d-flex justify-content-end">
-                  <li><a href="#" class="text-primary" data-toggle="tooltip" title="" data-original-title="view"><i class="far fa-eye"></i></a></li>
-                  <li><a href="#" class="text-info" data-toggle="tooltip" title="" data-original-title="Edit"><i class="fas fa-pencil-alt"></i></a></li>
-                  <li><a href="#" class="text-danger" data-toggle="tooltip" title="" data-original-title="Delete"><i class="far fa-trash-alt"></i></a></li>
-                </ul>
-              </td>
-            </tr> -->
