--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -17,7 +17,7 @@
                 <li class="main-header__item">
                     <a class="<%= path === '/mymatches' ? 'active' : '' %>" href="/mymatches">My Matches</a>
                 </li>
-                <% if (user.role == "admin") { %>
+                <% if (isAdministrator) { %>
                     <li class="main-header__item">
                         <a class="<%= path === '/listMatch' ? 'active' : '' %>" href="/listMatch">All Matches</a>
                     </li>
@@ -38,7 +38,7 @@
                 </li>
             <% } else { %>
                 <li class="main-header__item">
-                    <a class="<%= path === '/profile' ? 'active' : '' %>" href="/profile/<%= user.usrName %> ">My Profile</a>
+                    <a class="<%= path === '/profile' ? 'active' : '' %>" href="/myprofile">My Profile</a>
                 </li>
                 <li class="main-header__item">
                     <button onclick="popup()" id="logoutButton">Logout</button>
@@ -69,6 +69,14 @@
             <li class="mobile-nav__item">
                 <a class="<%= path === '/mymatches' ? 'active' : '' %>" href="/mymatches">My Matches</a>
             </li>
+            <% if (isAdministrator) { %>
+                <li class="mobile-nav__item">
+                    <a class="<%= path === '/listMatch' ? 'active' : '' %>" href="/listMatch">All Matches</a>
+                </li>
+                <li class="mobile-nav__item">
+                    <a class="<%= path === '/listUser' ? 'active' : '' %>" href="/listUser">All Users</a>
+                </li>
+            <% } %>
         <% } %>
         <% if (!isAuthenticated) { %>
             <li class="mobile-nav__item">
