Implementazione modifica password
credo che funziona ma non l 'ho testato

--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -87,7 +87,7 @@
             </li>
         <% } else { %>
             <li class="mobile-nav__item">
-                <a class="<%= path === '/profile' ? 'active' : '' %>" href="/profile/<%= user.usrName %> ">My Profile</a>
+                <a class="<%= path === '/profile' ? 'active' : '' %>" href="/myprofile">My Profile</a>
             </li>
             <li class="mobile-nav__item">
                 <button onclick="popup2()" id="logoutButton" type="submit">Logout</button>
