Introduzione Header di sicurezza con l'utilizzo di Helmet: 1) X-Powered-By 2) Content Security Policy 3) X-Content-Type-Options
Rimozione "in-line" script per le policy di csp.
Riduzione "in-line" style.

--- a/views/app/index.ejs
+++ b/views/app/index.ejs
@@ -3,14 +3,7 @@
     
 </head>
 
-<script>
-  window.addEventListener("load", () => {
-    setTimeout(() => {
-      const infoPopUp = document.getElementById("infoPopUp")
-      infoPopUp.style.display = "none";
-    }, 10000);
-  });
-</script>
+<script src="/js/infoPopup.js"></script>
 
 <body>
     <%- include('../includes/navigation.ejs') %>
