--- a/views/user/editPass.ejs
+++ b/views/user/editPass.ejs
@@ -37,19 +37,22 @@
                                 <div class="text-center">
                                     <form class="login100-form validate-form" action="/myprofile/editpass" method="POST">
                                         <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+                                        <input type="hidden" value="<%= primaModifica %>" name="primaModifica">
                                         <% if (errorMessage) { %>
                                             <div class="flex-c-m">
                                                 <div class="popout error-message"><%= errorMessage %></div>
                                             </div>
+                                        <% } %> 
+                                        <% if (primaModifica) { %>
+                                            <div class="wrap-input100 validate-input m-b-23">
+                                                <span class="label-input100">Old Password</span>
+                                                <input
+                                                    class="<%= validationErrors.find(e => e.param == 'oldPassword') ? 'input100-invalid' : 'input100' %>"
+                                                    placeholder="Type your Old password" required
+                                                    type="password" name="oldPassword" id="oldPassword" required value="<%= oldInput.oldPassword %>">
+                                                <span class="focus-input100" data-symbol="&#xf190;"></span>
+                                            </div>
                                         <% } %>
-                                        <div class="wrap-input100 validate-input m-b-23">
-                                            <span class="label-input100">Old Password</span>
-                                            <input
-                                                class="<%= validationErrors.find(e => e.param == 'oldPassword') ? 'input100-invalid' : 'input100' %>"
-                                                placeholder="Type your Old password" required
-                                                type="password" name="oldPassword" id="oldPassword" required value="<%= oldInput.oldPassword %>">
-                                            <span class="focus-input100" data-symbol="&#xf190;"></span>
-                                        </div>
                                         <div class="wrap-input100 validate-input m-b-23">
                                             <span class="label-input100">New Password</span>
                                             <input
