--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -27,7 +27,7 @@
                             <div class="card-header text-center border-0 pt-8 pt-md-4 pb-0 pb-md-4">
                                 <div class="d-flex justify-content-between">
                                     <a class="btn btn-sm btn-primary" href="/editUser/<%= user.usrName %>?edit=true">Modifica il<br />tuo Profilo</a>
-                                    <a class="btn btn-sm btn-primary" href="/myprofile/editpass">Modifica<br />Password</a><!-- TODO implementa modifca password -->
+                                    <a class="btn btn-sm btn-primary" href="/myprofile/editpass">Modifica<br />Password</a>
                                 </div>
                             </div>
                             <div class="card-body pt-0 pt-md-4">
