--- a/views/user/mymatches.ejs
+++ b/views/user/mymatches.ejs
@@ -37,7 +37,7 @@
             <% } else { %>
                 <div class="wrapper">
                     <a href="/add-match" style="text-decoration: none">
-                        <h1 class="match__subtitle" style="color: white;">You have not created any games yet!</h1>
+                        <h1 class="btn">You have not created any games yet!</h1>
                     </a>
                 </div>
             <% } %>
@@ -70,7 +70,7 @@
             <% } else { %>
                 <div class="wrapper">
                     <a href="/matches" style="text-decoration: none">
-                        <h1 class="match__subtitle">Join in a new match!</h1>
+                        <h1 class="btn">Join in a new match!</h1>
                     </a>
                 </div>
             <% } %>
