--- a/views/user/editPass.ejs
+++ b/views/user/editPass.ejs
@@ -7,6 +7,10 @@
 
 </head>
 
+<script>
+    console.log("<%= primaModifica %>");
+</script>
+
 <body>
     <%- include('../includes/navigation.ejs') %>
     <div class="main-content">
@@ -43,7 +47,7 @@
                                                 <div class="popout error-message"><%= errorMessage %></div>
                                             </div>
                                         <% } %> 
-                                        <% if (primaModifica) { %>
+                                        <% if (primaModifica === true || primaModifica === "true") { %>
                                             <div class="wrap-input100 validate-input m-b-23">
                                                 <span class="label-input100">Old Password</span>
                                                 <input
